--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.example.instagramviewerapp"
+        applicationId "com.example.delivery_app"
         minSdk 21
         targetSdk 31
         versionCode 1
