--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
     //=================API COMPONENTS===============//
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
