--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,7 @@ dependencies {
     testImplementation "androidx.test.ext:junit-ktx:1.1.3"
     testImplementation 'org.robolectric:robolectric:4.5-alpha-1'
     testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1"
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    testImplementation "io.mockk:mockk:1.10.5"
 }
